# hanoi

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  hanoi.1  hanoi.c  hanoi.h  main.c
m4/: .gitignore  gnulib-cache.m4
man/: .gitignore  Makefile.am
src/: hanoi.h  main.c
