#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hanoi], [1.0.0], [Kieran Colford <colfordk@gmail.com>],,
		 [http://github.com/kcolford/hanoi.git])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([hanoi.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h argp.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
